# depthbasedRL

./: .gitignore  CLAUDE.md  MIGRATION_CHECKLIST.txt  README.md  bench_depth_results.csv  bench_depth_speed.sh  convert_assets.py  convert_rlgames_to_simple_rl.py  diagnose_multigpu.sh  download_fmb_assets.py  eval.py  pretrain.sh  pretrain_3gpu.sh  pretrain_5gpu.sh  pretrain_isaacgym.sh  pretrain_isaaclab.sh  pretrain_multi_gpu.sh  pyproject.toml  setup.py  test_depth_simple.py  test_isaaclab_depth_train.py  test_multigpu_depth_only.py  test_multigpu_isaaclab.py  test_multigpu_stability.sh  test_rl_player_simple_rl.py  test_rlgames_vs_simple_rl_dummy_env.py  test_rlgames_vs_simple_rl_forward.py  test_sapg_multi_seed.py  test_scale.py  test_simple_rl_core.py  test_simple_rl_load.py  train_isaacgym.py  train_isaaclab.py
.claude/: .nfs000000000057c28a00035bdf  .nfs000000000061b03600004745
assets/urdf/Sharpa_HA4_URDF_USD_XML_Stanford_V2.2.5/src/right_sharpa_ha4/: CMakeLists.txt  package.xml  right_sharpa_ha4_overlay.usda  right_sharpa_ha4_v2_1.urdf  right_sharpa_ha4_v2_1.xml
assets/urdf/Sharpa_HA4_URDF_USD_XML_Stanford_V2.2.5/src/right_sharpa_ha4/launch/: display.launch.py  gazebo.launch.py
assets/urdf/Sharpa_HA4_URDF_USD_XML_Stanford_V2.2.5/src/right_sharpa_ha4/right_sharpa_ha4_v2_1/: right_sharpa_ha4_v2_1.usd
cfg/: config.yaml
debug_differences/: README.md  bench_env_creation.py  bench_isaacgym_env_creation.py  compare_physics.py  physics_dump_isaacgym.py  physics_dump_isaacsim.py  plot_policy_eval_diff.py  plot_policy_rollout_diff.py  plot_sine_hand_diff.py  (+7 more)
(+9137 files in other folders)
